# forgeflow

./: .env.example  .gitignore  .pypirc.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  publish_to_pypi.bat  publish_to_pypi.sh  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt
.claude/: settings.local.json
config/: pipelines.yaml
dataforge/airflow/: __init__.py  hooks.py  operators.py  sensors.py
dataforge/api/: main.py
dataforge/cli/: __init__.py  main.py
dataforge/connectors/: __init__.py  http.py  rest.py
dataforge/core/: __init__.py  cache.py  exceptions.py
dataforge/pipeline/: __init__.py  executor.py  loader.py
dataforge/sinks/: __init__.py  duckdb.py  file.py  postgres.py
dataforge/transformers/: __init__.py  json_normalizer.py
docs/: README.md  index.md  mkdocs.yml
docs/api/: index.md
docs/examples/: index.md  phase1-components.md
docs/guides/: core-concepts.md  getting-started.md
examples/: airflow_dag_example.py
forgeflow/airflow/: __init__.py  hooks.py  operators.py  sensors.py
forgeflow/api/: main.py
forgeflow/cli/: __init__.py  main.py
forgeflow/connectors/: __init__.py
forgeflow/core/: __init__.py  transformer.py
forgeflow/pipeline/: __init__.py  executor.py
forgeflow/sinks/: __init__.py  duckdb.py  file.py
forgeflow/transformers/: __init__.py  filter.py  json_normalizer.py  schema_mapper.py
scripts/: run_pipeline.py
tests/: test_jsonplaceholder_api.py  test_pipeline_loader.py  test_transformers.py
